fixed z-index on body img, footer, card section and navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,7 +82,9 @@
   display: none;
 }
 
-
+.footer-body{
+  z-index: 100;
+}
 
 html {
   scroll-behavior: smooth;
